Revert "Collate update"
This reverts commit 6c1f43facde56e27736f7b7161c6534a4cca356f.

--- a/collated/main/A0150120H.md
+++ b/collated/main/A0150120H.md
@@ -7,7 +7,7 @@
      * @throws IllegalValueException if any of the raw values are invalid
      */
     public AddCommand(String nameStr, Optional<String> startDateTimeStr, Optional<String> endDateTimeStr,
-            Set<String> tagsStr, Optional<RecurInterval> recurInterval) throws IllegalValueException {
+            Set<String> tagsStr) throws IllegalValueException {
         final Set<Tag> tagSet = new HashSet<>();
         for (String tagName : tagsStr) {
             tagSet.add(new Tag(tagName));
@@ -24,8 +24,8 @@
         }
 
         UniqueTagList tagList = new UniqueTagList(tagSet);
-        this.toAdd = new Task(name, startDateTime, endDateTime, tagList, true,
-                                    recurInterval.orElse(RecurInterval.NONE), new ArrayList<Date>());
+        this.toAdd = new Task(name, startDateTime, endDateTime, tagList, true, true, false,
+                                    RecurInterval.NONE, new ArrayList<Date>());
         commandSuccess = false;
     }
 
@@ -35,7 +35,7 @@
         try {
             model.addTask(toAdd);
             commandSuccess = true;
-            UndoHistory.getInstance().push(this);
+            undoHistory.push(this);
             EventsCenter.getInstance().post(new JumpToListRequestEvent(model.getFilteredTaskListIndex(toAdd)));
             return new CommandResult(String.format(MESSAGE_SUCCESS, toAdd));
         } catch (UniqueTaskList.DuplicateTaskException e) {
@@ -66,6 +66,19 @@
     public static final String MESSAGE_USAGE = COMMAND_WORD + ": deletes all tasks.\n"
             + "WARNING: THIS CANNOT BE UNDONE\n"
             + "Example: " + COMMAND_WORD;
+```
+###### \java\seedu\tache\logic\commands\Command.java
+``` java
+    protected static Stack<Undoable> undoHistory = new Stack<Undoable>();
+```
+###### \java\seedu\tache\logic\commands\Command.java
+``` java
+    /**
+     * Clears the undo history
+     */
+    protected static void clearUndoHistory() {
+        undoHistory = new Stack<Undoable>();
+    }
 ```
 ###### \java\seedu\tache\logic\commands\DeleteCommand.java
 ``` java
@@ -203,10 +216,10 @@ public class UndoCommand extends Command {
     @Override
     public CommandResult execute() {
         // TODO Auto-generated method stub
-        Undoable lastCommand = UndoHistory.getInstance().pop();
-        if (lastCommand == null) {
+        if (undoHistory.isEmpty()) {
             return new CommandResult(MESSAGE_EMPTY_HISTORY);
         } else {
+            Undoable lastCommand = undoHistory.pop();
             assert lastCommand.isUndoable() : "The popped command can't be undone!";
             try {
                 String undoResult = lastCommand.undo();
@@ -215,69 +228,6 @@ public class UndoCommand extends Command {
                 return new CommandResult(String.format(MESSAGE_FAILURE, e.getMessage()));
             }
         }
-    }
-
-}
-```
-###### \java\seedu\tache\logic\commands\UndoHistory.java
-``` java
-package seedu.tache.logic.commands;
-
-import java.util.Stack;
-
-/*
- * Class to handle the Undo history. Uses a First-In-Last-Out data structure
- * This class follows the Singleton Pattern
- */
-public class UndoHistory {
-
-    private Stack<Undoable> data;
-    private static UndoHistory currentInstance;
-
-    /**
-     * Creates a new UndoHistory object.
-     * This should only be called once in the entire exectution
-     */
-    private UndoHistory() {
-        data = new Stack<Undoable>();
-    }
-
-    /**
-     * Saves an Undoable Command into history
-     * @param target Undoable Command to be saved
-     */
-    public void push(Undoable target) {
-        data.push(target);
-    }
-
-    /**
-     * Removes and returns the latest Undoable Command from history.
-     * @return Undoable object if history is populated, null otherwise
-     */
-    public Undoable pop() {
-        if (data.isEmpty()) {
-            return null;
-        } else {
-            return data.pop();
-        }
-    }
-
-    /**
-     * Clears all history
-     */
-    public void clear() {
-        data = new Stack<Undoable>();
-    }
-
-    /**
-     * Returns an instance of this class. It is guaranteed to be the same instance throughout execution.
-     * @return instance of this class
-     */
-    public static UndoHistory getInstance() {
-        if (currentInstance == null) {
-            currentInstance = new UndoHistory();
-        }
-        return currentInstance;
     }
 
 }
@@ -307,160 +257,12 @@ public class AddCommandParser {
         }
 
         String taskWithoutTags = taskTag[0];
-        Stack<PossibleDateTime> possibleDateTimes = parseDateTimeRecurrenceIdentifiers(taskWithoutTags);
-        DateTimeProperties filteredDateTimes = filterPossibleDateTime(possibleDateTimes);
-        PossibleDateTime startDateTime = filteredDateTimes.start;
-        PossibleDateTime endDateTime = filteredDateTimes.end;
-        PossibleDateTime recurInterval = filteredDateTimes.recurrence;
-
-        if (endDateTime == null && startDateTime != null) {
-            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE));
-        } else if (endDateTime == null && startDateTime == null) {
-            try {
-                return new AddCommand(taskWithoutTags, Optional.empty(), Optional.empty(), tagSet, Optional.empty());
-            } catch (IllegalValueException ex) {
-                return new IncorrectCommand(ex.getMessage());
-            }
-        } else if (startDateTime == null && recurInterval != null) {
-            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE));
-        } else {
-            String taskName = taskWithoutTags;
-
-            Optional<String> endDateTimeStr = Optional.of(endDateTime.data);
-            taskName = ParserUtil.removeLast(taskName, endDateTime.data);
-
-            Optional<String> startDateTimeStr = Optional.empty();
-            if (startDateTime != null) {
-                startDateTimeStr = Optional.of(startDateTime.data);
-                taskName = ParserUtil.removeLast(taskName, startDateTime.data);
-            }
-
-            Optional<RecurInterval> parsedRecurInterval = Optional.empty();
-            if (recurInterval != null) {
-                parsedRecurInterval = Optional.of(recurInterval.recurInterval);
-                taskName = ParserUtil.removeLast(taskName, recurInterval.data);
-            }
-
-            try {
-                return new AddCommand(taskName, startDateTimeStr, endDateTimeStr, tagSet, parsedRecurInterval);
-            } catch (IllegalValueException ex) {
-                return new IncorrectCommand(ex.getMessage());
-            }
-        }
-    }
-
-    /**
-     * Looks for all possible date/time strings based on identifiers
-     * @param input String to parse
-     * @return Stack of PossibleDateTime objects, each representing a possible date/time string
-     */
-    private static Stack<PossibleDateTime> parseDateTimeRecurrenceIdentifiers(String input) {
-        String[] inputs = input.split(" ");
-        int currentIndex = 0;
-        Stack<PossibleDateTime> result = new Stack<PossibleDateTime>();
-        PossibleDateTime current = new PossibleDateTime(new String(), PossibleDateTime.INVALID_INDEX,
-                                                        DateTimeType.UNKNOWN);
-        for (int i = 0; i < inputs.length; i++) {
-            String word = inputs[i];
-            if (ParserUtil.isStartDateIdentifier(word)) {
-                result.push(current);
-                current = new PossibleDateTime(word, currentIndex, DateTimeType.START);
-            } else if (ParserUtil.isEndDateIdentifier(word)) {
-                result.push(current);
-                current = new PossibleDateTime(word, currentIndex, DateTimeType.END);
-            } else if (ParserUtil.isRecurrencePrefix(word)) {
-                result.push(current);
-                current = new PossibleDateTime(word, currentIndex, DateTimeType.RECURRENCE_PREFIX);
-            } else if (ParserUtil.isRecurrenceDaily(word)) {
-                result.push(current);
-                result.push(new PossibleDateTime(word, currentIndex, DateTimeType.RECURRENCE, RecurInterval.DAY));
-                current = new PossibleDateTime(new String(), PossibleDateTime.INVALID_INDEX, DateTimeType.UNKNOWN);
-            } else if (ParserUtil.isRecurrenceWeekly(word)) {
-                result.push(current);
-                result.push(new PossibleDateTime(word, currentIndex, DateTimeType.RECURRENCE, RecurInterval.WEEK));
-                current = new PossibleDateTime(new String(), PossibleDateTime.INVALID_INDEX, DateTimeType.UNKNOWN);
-            } else if (ParserUtil.isRecurrenceMonthly(word)) {
-                result.push(current);
-                result.push(new PossibleDateTime(word, currentIndex, DateTimeType.RECURRENCE, RecurInterval.MONTH));
-                current = new PossibleDateTime(new String(), PossibleDateTime.INVALID_INDEX, DateTimeType.UNKNOWN);
-            } else if (ParserUtil.isRecurrenceYearly(word)) {
-                result.push(current);
-                result.push(new PossibleDateTime(word, currentIndex, DateTimeType.RECURRENCE, RecurInterval.YEAR));
-                current = new PossibleDateTime(new String(), PossibleDateTime.INVALID_INDEX, DateTimeType.UNKNOWN);
-            } else {
-                current.appendDateTime(word);
-            }
-            currentIndex += word.length() + 1;
-        }
-        result.push(current);
-        return result;
-    }
-
-    /**
-     * Class to describe a date/time String that was found
-     *
-     */
-    static class PossibleDateTime {
-        static enum DateTimeType { START, END, UNKNOWN, RECURRENCE, RECURRENCE_PREFIX };
-
-        int startIndex;
-        String data;
-        DateTimeType type;
-        RecurInterval recurInterval;
-
-        static final int INVALID_INDEX = -1;
-
-        PossibleDateTime(String data, int index, DateTimeType type) {
-            this.startIndex = index;
-            this.type = type;
-            this.data = data;
-        }
-
-        PossibleDateTime(String data, int index, DateTimeType type, RecurInterval recurInterval) {
-            this(data, index, type);
-            this.recurInterval = recurInterval;
-        }
-
-        void appendDateTime(String data) {
-            this.data += " " + data;
-        }
-    }
-
-    static class DateTimeProperties {
-        PossibleDateTime start;
-        PossibleDateTime end;
-        PossibleDateTime recurrence;
-
-        DateTimeProperties(PossibleDateTime start, PossibleDateTime end, PossibleDateTime recurrence) {
-            this.start = start;
-            this.end = end;
-            this.recurrence = recurrence;
-        }
-    }
-
-    /**
-     * Filters all possible date/time strings into just 1 of each type. This method selects PossibleDateTimes that
-     * can be parsed and appears last in the String
-     * @param input String to parse
-     * @return A DateTimeProperties object encapsulating the PossibleDateTime objects filtered
-     */
-    private static DateTimeProperties filterPossibleDateTime(Stack<PossibleDateTime> dateTimeStack) {
-        PossibleDateTime recurInterval = null;
+        Deque<PossibleDateTime> possibleDateTimes = ParserUtil.parseDateTimeIdentifiers(taskWithoutTags);
         PossibleDateTime startDateTime = null;
         PossibleDateTime endDateTime = null;
-        while (!dateTimeStack.isEmpty()) {
-            PossibleDateTime current = dateTimeStack.pop();
-            if (current.type == DateTimeType.RECURRENCE && recurInterval == null) {
-                recurInterval = current;
-            } else if (current.type == DateTimeType.RECURRENCE_PREFIX && recurInterval == null) {
-                try {
-                    current.recurInterval = ParserUtil.parseStringToRecurInterval(
-                                            current.data.replaceFirst(RECURRENCE_IDENTIFIER_PREFIX, ""));
-                    recurInterval = current;
-                } catch (IllegalValueException ex) {
-                    continue;
-                }
-            } else if (!ParserUtil.canParse(current.data)) {
+        while (!possibleDateTimes.isEmpty()) {
+            PossibleDateTime current = possibleDateTimes.pop();
+            if (!ParserUtil.canParse(current.data)) {
                 continue;
             } else if (current.type == DateTimeType.END && endDateTime == null) {
                 endDateTime = current;
@@ -468,20 +270,81 @@ public class AddCommandParser {
                 startDateTime = current;
             }
         }
-        return new DateTimeProperties(startDateTime, endDateTime, recurInterval);
+        if (endDateTime == null && startDateTime != null) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE));
+        } else if (endDateTime == null && startDateTime == null) {
+            try {
+                return new AddCommand(taskWithoutTags, Optional.empty(), Optional.empty(), tagSet);
+            } catch (IllegalValueException ex) {
+                return new IncorrectCommand(ex.getMessage());
+            }
+        } else {
+            int startOfDateTimeIndex = endDateTime.startIndex;
+            if (startDateTime != null) {
+                startOfDateTimeIndex = Math.min(startOfDateTimeIndex, startDateTime.startIndex);
+            }
+            StringBuilder sb = new StringBuilder();
+            String[] taskNameSegments = taskWithoutTags.split(" ");
+            for (int i = 0; i < startOfDateTimeIndex; i++) {
+                sb.append(taskNameSegments[i]).append(" ");
+            }
+            String taskName = sb.toString();
+            Optional<String> endDateTimeStr = Optional.of(endDateTime.data);
+            Optional<String> startDateTimeStr;
+            if (startDateTime != null) {
+                startDateTimeStr = Optional.of(startDateTime.data);
+            } else {
+                startDateTimeStr = Optional.empty();
+            }
+            try {
+                return new AddCommand(taskName, startDateTimeStr, endDateTimeStr, tagSet);
+            } catch (IllegalValueException ex) {
+                return new IncorrectCommand(ex.getMessage());
+            }
+        }
+    }
+
+    public Command parseStructured(String args) {
+        String[] taskFields = args.split(DELIMITER_PARAMETER);
+        Set<String> tagSet = new HashSet<String>();
+        if (taskFields.length == 0) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE));
+        } else {
+            String name = taskFields[0];
+            Optional<String> startDateTime = Optional.empty();
+            Optional<String> endDateTime = Optional.empty();
+            for (int i = 1; i < taskFields.length; i++) {
+                String currentChunk = taskFields[i];
+                if (ParserUtil.hasDate(currentChunk) || ParserUtil.hasTime(currentChunk)) {
+                    if (!endDateTime.isPresent()) {
+                        endDateTime = Optional.of(taskFields[i]);
+                    } else if (!startDateTime.isPresent()) {
+                        startDateTime = endDateTime;
+                        endDateTime = Optional.of(taskFields[i]);
+                    } else {
+                        return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT,
+                                AddCommand.MESSAGE_USAGE));
+                    }
+                } else {
+                    tagSet.add(taskFields[i]);
+                }
+            }
+            try {
+                return new AddCommand(name, startDateTime, endDateTime, tagSet);
+            } catch (IllegalValueException e) {
+                // TODO Auto-generated catch block
+                return new IncorrectCommand(e.getMessage());
+            }
+        }
     }
 
 }
 ```
-###### \java\seedu\tache\logic\parser\CliSyntax.java
+###### \java\seedu\tache\logic\parser\ParserUtil.java
 ``` java
-    public static final String[] DATE_IDENTIFIER_START = {"from"};
-    public static final String[] DATE_IDENTIFIER_END = {"to", "on", "by", "before"};
-    public static final String RECURRENCE_IDENTIFIER_PREFIX = "every";
-    public static final String[] RECURRENCE_IDENTIFIER_DAILY = {"daily", "every day", "everyday"};
-    public static final String[] RECURRENCE_IDENTIFIER_WEEKLY = {"weekly", "every week"};
-    public static final String[] RECURRENCE_IDENTIFIER_MONTHLY = {"monthly", "every month"};
-    public static final String[] RECURRENCE_IDENTIFIER_YEARLY = {"yearly", "every year", "annually"};
+    static enum DateTimeType { START, END, UNKNOWN };
+    public static final String[] START_DATE_IDENTIFIER = {"from"};
+    public static final String[] END_DATE_IDENTIFIER = {"to", "on", "by", "before"};
 ```
 ###### \java\seedu\tache\logic\parser\ParserUtil.java
 ``` java
@@ -519,7 +382,7 @@ public class AddCommandParser {
      * @return true if it's a start date identifier, false otherwise
      */
     public static boolean isStartDateIdentifier(String s) {
-        return isFoundIn(s, DATE_IDENTIFIER_START);
+        return isFoundIn(s, START_DATE_IDENTIFIER);
     }
 
     /**
@@ -528,37 +391,57 @@ public class AddCommandParser {
      * @return true if it's a start date identifier, false otherwise
      */
     public static boolean isEndDateIdentifier(String s) {
-        return isFoundIn(s, DATE_IDENTIFIER_END);
+        return isFoundIn(s, END_DATE_IDENTIFIER);
     }
 
     /**
-     * Checks if the given String is the prefix for a recurrence identifier
-     * @param s String to check
-     * @return true if it's a recurrence identifier prefix, false otherwise
+     * Looks for all possible date/time strings based on identifiers
+     * @param input String to parse
+     * @return Deque of PossibleDateTime objects, each representing a possible date/time string
      */
-    public static boolean isRecurrencePrefix(String s) {
-        return s.equalsIgnoreCase(RECURRENCE_IDENTIFIER_PREFIX);
+    public static Deque<PossibleDateTime> parseDateTimeIdentifiers(String input) {
+        String[] inputs = input.split(" ");
+        Deque<PossibleDateTime> result = new LinkedList<PossibleDateTime>();
+        PossibleDateTime current = new PossibleDateTime(PossibleDateTime.INVALID_INDEX, DateTimeType.UNKNOWN);
+        for (int i = 0; i < inputs.length; i++) {
+            String word = inputs[i];
+            if (isStartDateIdentifier(word)) {
+                result.push(current);
+                current = new PossibleDateTime(i, DateTimeType.START);
+            } else if (isEndDateIdentifier(word)) {
+                result.push(current);
+                current = new PossibleDateTime(i, DateTimeType.END);
+            } else {
+                current.appendDateTime(i, word);
+            }
+        }
+        result.push(current);
+        return result;
     }
 
     /**
-     * Checks if the given String is a recurrence identifier
-     * @param s String to check
-     * @return true if it's a recurrence identifier, false otherwise
+     * Class to describe a date/time String that was found
+     *
      */
-    public static boolean isRecurrenceDaily(String s) {
-        return isFoundIn(s, RECURRENCE_IDENTIFIER_DAILY);
-    }
+    static class PossibleDateTime {
+        int startIndex;
+        int endIndex;
+        String data;
+        DateTimeType type;
 
-    public static boolean isRecurrenceWeekly(String s) {
-        return isFoundIn(s, RECURRENCE_IDENTIFIER_WEEKLY);
-    }
+        static final int INVALID_INDEX = -1;
 
-    public static boolean isRecurrenceMonthly(String s) {
-        return isFoundIn(s, RECURRENCE_IDENTIFIER_MONTHLY);
-    }
+        PossibleDateTime(int index, DateTimeType type) {
+            this.startIndex = index;
+            this.endIndex = index;
+            this.type = type;
+            this.data = new String();
+        }
 
-    public static boolean isRecurrenceYearly(String s) {
-        return isFoundIn(s, RECURRENCE_IDENTIFIER_YEARLY);
+        void appendDateTime(int index, String data) {
+            this.data += " " + data;
+            this.endIndex = index;
+        }
     }
 
     public static boolean canParse(String s) {
@@ -588,23 +471,6 @@ public class AddCommandParser {
         }
         return false;
     }
-    /**
-     * Removes a chunk of the given string
-     * @param s Original String
-     * @param startIndex Start index of the chunk to remove, inclusive
-     * @param endIndex End index of the chunk to remove, exclusive
-     * @return
-     */
-    public static String removeLast(String s, String target) {
-        int targetIndex = s.lastIndexOf(target);
-        if (targetIndex == -1) {
-            return s;
-        } else {
-            String firstPortion = s.substring(0, targetIndex);
-            String secondPortion = s.substring(targetIndex + target.length()).trim();
-            return firstPortion.concat(secondPortion);
-        }
-    }
 
 }
 ```
@@ -623,18 +489,6 @@ public class AddCommandParser {
     public synchronized void addTask(int index, Task task) throws DuplicateTaskException {
         taskManager.addTask(index, task);
         indicateTaskManagerChanged();
-    }
-
-    public List<ReadOnlyTask> updateMultipleTasks(ReadOnlyTask[] tasksToUpdate, ReadOnlyTask[] editedTasks)
-            throws UniqueTaskList.DuplicateTaskException {
-        assert tasksToUpdate.length == editedTasks.length;
-        ArrayList<ReadOnlyTask> updatedTasks = new ArrayList<ReadOnlyTask>();
-        for (int i = 0; i < tasksToUpdate.length; i++) {
-            taskManager.updateTask(tasksToUpdate[i], editedTasks[i]);
-            updatedTasks.add(tasksToUpdate[i]);
-        }
-        indicateTaskManagerChanged();
-        return updatedTasks;
     }
 ```
 ###### \java\seedu\tache\model\ModelManager.java
