--- a/collated/test/A0139925U.md
+++ b/collated/test/A0139925U.md
@@ -3,7 +3,6 @@
 ``` java
 package guitests;
 
-import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 import static seedu.tache.commons.core.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
 
@@ -19,7 +18,7 @@ import seedu.tache.testutil.TestTask;
 public class CompleteCommandTest extends TaskManagerGuiTest {
 
     @Test
-    public void complete_allTasks_success() {
+    public void completeAllTasks() {
         commandBox.runCommand("list");
         commandBox.runCommand("complete 1,2,3,4,5");
         TestTask[] completedHits = td.getTypicalTasks();
@@ -29,7 +28,7 @@ public class CompleteCommandTest extends TaskManagerGuiTest {
     }
 
     @Test
-    public void complete_oneTask_success() {
+    public void completeOneTasks() {
         commandBox.runCommand("list");
         commandBox.runCommand("complete 1");
         TestTask[] tempTasksList = td.getTypicalTasks();
@@ -42,7 +41,7 @@ public class CompleteCommandTest extends TaskManagerGuiTest {
     }
 
     @Test
-    public void complete_someTasks_success() {
+    public void completeSomeTasks() {
         commandBox.runCommand("list");
         commandBox.runCommand("complete 1,3,5");
         TestTask[] tempTasksList = td.getTypicalTasks();
@@ -58,13 +57,13 @@ public class CompleteCommandTest extends TaskManagerGuiTest {
     }
 
     @Test
-    public void complete_noTasks_failure() {
+    public void completeNoTasks() {
         commandBox.runCommand("complete ");
         assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, CompleteCommand.MESSAGE_USAGE));
     }
 
     @Test
-    public void complete_invalidIndex_failure() {
+    public void completeInvalidIndex() {
         commandBox.runCommand("complete a");
         assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, CompleteCommand.MESSAGE_USAGE));
 
@@ -76,36 +75,11 @@ public class CompleteCommandTest extends TaskManagerGuiTest {
     }
 
     @Test
-    public void complete_invalidCommand_failure() {
+    public void completeInvalidCommandFail() {
         commandBox.runCommand("completekkjksjkds");
         assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
     }
 
-    @Test
-    public void complete_recurringTask_success() {
-        commandBox.runCommand("clear");
-        commandBox.runCommand("add test from 9 april to 16 april every day");
-        commandBox.runCommand("list");
-
-        commandBox.runCommand("complete 1");
-        assertEqualTaskListHits(8);
-
-        commandBox.runCommand("complete 1,2,3");
-        assertEqualTaskListHits(5);
-
-        commandBox.runCommand("complete 3,4");
-        assertEqualTaskListHits(3);
-
-        commandBox.runCommand("complete 3");
-        assertEqualTaskListHits(0);
-
-        commandBox.runCommand("list completed");
-        assertEqualTaskListHits(9);
-    }
-
-```
-###### \java\guitests\CompleteCommandTest.java
-``` java
     private void assertCompleteResult(String command, TestTask... expectedHits) {
         commandBox.runCommand(command);
         assertListSize(expectedHits.length);
@@ -119,13 +93,6 @@ public class CompleteCommandTest extends TaskManagerGuiTest {
             successMessage += expectedHits[i].toString();
         }
         assertResultMessage(String.format(CompleteCommand.MESSAGE_COMPLETED_TASK_SUCCESS, successMessage));
-    }
-
-    /**
-     * Checks whether the number of tasks in taskListPanel is same as {@code expectedHits}
-     */
-    private void assertEqualTaskListHits(int expectedHits) {
-        assertEquals(taskListPanel.getNumberOfTasks(), expectedHits);
     }
 }
 ```
@@ -152,7 +119,6 @@ public class CompleteCommandTest extends TaskManagerGuiTest {
 
         assertEditWithSameFilterSuccess(filteredTaskListIndex, taskManagerIndex, detailsToEdit, editedTask);
     }
-
 ```
 ###### \java\guitests\EditCommandTest.java
 ``` java
@@ -183,42 +149,6 @@ public class CompleteCommandTest extends TaskManagerGuiTest {
         assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_USAGE));
     }
 
-    @Test
-    public void edit_recurringTask_success() {
-        commandBox.runCommand("clear");
-        commandBox.runCommand("add test from 9 april to 16 april daily");
-
-        commandBox.runCommand("edit 1 change recurinterval to day");
-        assertEqualTaskListHits(9);
-
-        commandBox.runCommand("edit 9 change recurinterval to week");
-        assertEqualTaskListHits(3);
-
-        commandBox.runCommand("edit 3 change recurinterval to month");
-        assertEqualTaskListHits(2);
-
-        commandBox.runCommand("edit 2 change recurinterval to year");
-        assertEqualTaskListHits(2);
-    }
-
-    @Test
-    public void edit_recurringTask_failure() {
-        commandBox.runCommand("clear");
-        commandBox.runCommand("add test from 9 april to 16 april every day");
-
-        commandBox.runCommand("edit 1 change name to something");
-        assertResultMessage(EditCommand.MESSAGE_PART_OF_RECURRING_TASK);
-
-        commandBox.runCommand("edit 2 change name to something");
-        assertResultMessage(EditCommand.MESSAGE_PART_OF_RECURRING_TASK);
-
-        commandBox.runCommand("edit 3 change name to something");
-        assertResultMessage(EditCommand.MESSAGE_PART_OF_RECURRING_TASK);
-
-        commandBox.runCommand("edit 7 change name to something");
-        assertResultMessage(EditCommand.MESSAGE_PART_OF_RECURRING_TASK);
-    }
-
 ```
 ###### \java\guitests\EditCommandTest.java
 ``` java
@@ -244,83 +174,8 @@ public class CompleteCommandTest extends TaskManagerGuiTest {
 
         commandBox.runCommand("edit 1; tag *&;");
         assertResultMessage(Tag.MESSAGE_TAG_CONSTRAINTS);
-
-        commandBox.runCommand("edit 1 change mother to wonderwoman");
-        assertResultMessage(EditCommand.MESSAGE_NOT_EDITED);
-
-        commandBox.runCommand("edit 1 change start_date to wonderwoman");
-        assertResultMessage(DateTime.MESSAGE_DATE_CONSTRAINTS);
-
-        commandBox.runCommand("edit 1 change invalid to today and something to tmr");
-        assertResultMessage(EditCommand.MESSAGE_NOT_EDITED);
     }
 
-```
-###### \java\guitests\EditCommandTest.java
-``` java
-    /**
-     * Checks whether the number of tasks in taskListPanel is same as {@code expectedHits}
-     */
-    private void assertEqualTaskListHits(int expectedHits) {
-        assertEquals(taskListPanel.getNumberOfTasks(), expectedHits);
-    }
-```
-###### \java\guitests\guihandles\MainGuiHandle.java
-``` java
-    public Stage getPrimaryStage() {
-        return primaryStage;
-    }
-
-    public MainGuiHandle toggleMainGuiUsingCtrlAltDAccelerator() {
-        useCtrlAltDAccelerator();
-        return new MainGuiHandle(guiRobot, primaryStage);
-    }
-
-    public MainGuiHandle toggleMainGuiUsingCtrlQAccelerator() {
-        useCtrlQAccelerator();
-        return new MainGuiHandle(guiRobot, primaryStage);
-    }
-
-    private void useCtrlAltDAccelerator() {
-        guiRobot.push(KeyCode.CONTROL, KeyCode.ALT, KeyCode.D);
-        guiRobot.sleep(500);
-    }
-
-    private void useCtrlQAccelerator() {
-        guiRobot.push(KeyCode.CONTROL, KeyCode.Q);
-        guiRobot.sleep(500);
-    }
-```
-###### \java\guitests\HotkeyManagerGuiTest.java
-``` java
-package guitests;
-
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
-
-import org.junit.Test;
-
-import guitests.guihandles.MainGuiHandle;
-
-public class HotkeyManagerGuiTest extends TaskManagerGuiTest {
-
-    @Test
-    public void hotkeyManager_toggleWindowFocus_success() {
-        assertMainGuiHidden(mainGui.toggleMainGuiUsingCtrlAltDAccelerator());
-        assertMainGuiHidden(mainGui.toggleMainGuiUsingCtrlQAccelerator());
-        assertMainGuiOpen(mainGui.toggleMainGuiUsingCtrlAltDAccelerator());
-    }
-
-    private void assertMainGuiOpen(MainGuiHandle mainGuiHandle) {
-        assertTrue(mainGuiHandle.getPrimaryStage().isFocused() || !mainGuiHandle.getPrimaryStage().isIconified());
-    }
-
-    private void assertMainGuiHidden(MainGuiHandle mainGuiHandle) {
-        assertFalse(mainGuiHandle.getPrimaryStage().isFocused()
-                    && mainGuiHandle.getPrimaryStage().isIconified());
-    }
-
-}
 ```
 ###### \java\guitests\ListCommandTest.java
 ``` java
@@ -334,7 +189,6 @@ import org.junit.Test;
 
 import seedu.tache.commons.core.Messages;
 import seedu.tache.commons.exceptions.IllegalValueException;
-import seedu.tache.logic.commands.ListCommand;
 import seedu.tache.model.task.DateTime;
 import seedu.tache.testutil.TaskBuilder;
 import seedu.tache.testutil.TestTask;
@@ -382,155 +236,6 @@ public class ListCommandTest extends TaskManagerGuiTest {
     }
 
 ```
-###### \java\seedu\tache\logic\parser\EditCommandParserTest.java
-``` java
-package seedu.tache.logic.parser;
-
-import static org.junit.Assert.assertTrue;
-
-import org.junit.Test;
-
-import seedu.tache.logic.commands.Command;
-import seedu.tache.logic.commands.EditCommand;
-import seedu.tache.logic.commands.IncorrectCommand;
-
-public class EditCommandParserTest {
-
-    @Test
-    public void parse_invalidStructuredArguments_failure() {
-        Command invalidStructuredArgs = new EditCommandParser().parse("test;");
-        assertIncorrectCommandType(invalidStructuredArgs);
-
-        Command invalidStructuredArgsWithNoParameter = new EditCommandParser().parse("1;");
-        assertIncorrectCommandType(invalidStructuredArgsWithNoParameter);
-
-        Command invalidStructuredArgsWithInvalidParameter = new EditCommandParser().parse("1; invalid today;");
-        assertIncorrectCommandType(invalidStructuredArgsWithInvalidParameter);
-
-        Command invalidStructuredArgsWithNoIndex = new EditCommandParser().parse("ssasdt asadasdas;");
-        assertIncorrectCommandType(invalidStructuredArgsWithNoIndex);
-    }
-
-    @Test
-    public void parse_validStructuredArguments_success() {
-        Command validStructuredArgsSingleParameter = new EditCommandParser().parse("1; ed today;");
-        assertEditCommandType(validStructuredArgsSingleParameter);
-
-        Command validStructuredArgsMultiParameter = new EditCommandParser().parse("1; ed today; st 7pm;");
-        assertEditCommandType(validStructuredArgsMultiParameter);
-    }
-
-    @Test
-    public void parse_invalidNaturalArguments_failure() {
-        Command invalidStructuredArgs = new EditCommandParser().parse("test");
-        assertIncorrectCommandType(invalidStructuredArgs);
-
-        Command invalidStructuredArgsWithNoParameter = new EditCommandParser().parse("1");
-        assertIncorrectCommandType(invalidStructuredArgsWithNoParameter);
-
-        Command invalidStructuredArgsWithInvalidParameter = new EditCommandParser().parse("1 invalid to today");
-        assertIncorrectCommandType(invalidStructuredArgsWithInvalidParameter);
-
-        Command invalidStructuredArgsWithoutTo = new EditCommandParser().parse("1 change ssasdt asadasdas;");
-        assertIncorrectCommandType(invalidStructuredArgsWithoutTo);
-
-        Command invalidStructuredArgsWithNoIndex = new EditCommandParser().parse("change ssasdt asadasdas;");
-        assertIncorrectCommandType(invalidStructuredArgsWithoutTo);
-    }
-
-    @Test
-    public void parse_validNaturalArguments_success() {
-        Command validNaturalArgsSingleParameter = new EditCommandParser().parse("1 change ed to today");
-        assertEditCommandType(validNaturalArgsSingleParameter);
-
-        Command validNaturalArgsMultiParameter = new EditCommandParser().parse("1 change tag to one two three");
-        assertEditCommandType(validNaturalArgsMultiParameter);
-    }
-
-    private void assertIncorrectCommandType(Command command) {
-        boolean isSameType = false;
-        isSameType = command instanceof IncorrectCommand;
-        assertTrue(isSameType);
-    }
-
-    private void assertEditCommandType(Command command) {
-        boolean isSameType = false;
-        isSameType = command instanceof EditCommand;
-        assertTrue(isSameType);
-    }
-
-}
-```
-###### \java\seedu\tache\logic\parser\ParserUtilTest.java
-``` java
-package seedu.tache.logic.parser;
-
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
-
-import java.util.Optional;
-
-import org.junit.Test;
-
-
-public class ParserUtilTest {
-
-    @Test
-    public void parserUtil_invalidParameter_failure() {
-        assertFalse(ParserUtil.isValidParameter("sdfsd"));
-        assertFalse(ParserUtil.isValidParameter("sdkl"));
-        assertFalse(ParserUtil.isValidParameter("sd jkjk"));
-        assertFalse(ParserUtil.isValidParameter("sd ed"));
-        assertFalse(ParserUtil.isValidParameter("tggy"));
-        assertFalse(ParserUtil.isValidParameter("ccc"));
-    }
-
-    @Test
-    public void parserUtil_validParameter_success() {
-        assertTrue(ParserUtil.isValidParameter("tag"));
-        assertTrue(ParserUtil.isValidParameter("t"));
-        assertTrue(ParserUtil.isValidParameter("start_date"));
-        assertTrue(ParserUtil.isValidParameter("enddate"));
-        assertTrue(ParserUtil.isValidParameter("ri"));
-    }
-
-    @Test
-    public void parserUtil_parseIndex_failure() {
-        assertEquals(ParserUtil.parseIndex("sdfsd"), Optional.empty());
-        assertEquals(ParserUtil.parseIndex("123ddsfs"), Optional.empty());
-        assertEquals(ParserUtil.parseIndex("sdf 1"), Optional.empty());
-    }
-
-    @Test
-    public void parserUtil_hasDate_failure() {
-        assertFalse(ParserUtil.hasDate("sdfsd"));
-        assertFalse(ParserUtil.hasDate("7 april"));
-        assertFalse(ParserUtil.hasDate("10am"));
-    }
-
-    @Test
-    public void parserUtil_hasDate_success() {
-        assertTrue(ParserUtil.hasDate("04/04/17"));
-        assertTrue(ParserUtil.hasDate("10-04-17"));
-    }
-
-    @Test
-    public void parserUtil_hasTime_failure() {
-        assertFalse(ParserUtil.hasTime("sdfsd"));
-        assertFalse(ParserUtil.hasTime("7 april"));
-        assertFalse(ParserUtil.hasTime("10--am"));
-    }
-
-    @Test
-    public void parserUtil_hasTime_success() {
-        assertTrue(ParserUtil.hasTime("9pm"));
-        assertTrue(ParserUtil.hasTime("8.00pm"));
-        assertTrue(ParserUtil.hasTime("10am"));
-    }
-
-}
-```
 ###### \java\seedu\tache\model\task\DateTimeTest.java
 ``` java
 package seedu.tache.model.task;
@@ -548,12 +253,12 @@ import seedu.tache.commons.exceptions.IllegalValueException;
 public class DateTimeTest {
 
     @Test(expected = IllegalValueException.class)
-    public void dateTime_invalidDateTime_failure() throws IllegalValueException {
+    public void testInvalidDateTime() throws IllegalValueException {
         new DateTime("happy");
     }
 
     @Test
-    public void dateTime_correctDateParsing_success() throws IllegalValueException {
+    public void testCorrectDateParsing() throws IllegalValueException {
         DateTime test = new DateTime("02/07/19");
         assertEquals(test.getAmericanDateOnly(), "02/07/2019");
         assertEquals(test.getDateOnly(), "07/02/2019");
@@ -563,13 +268,13 @@ public class DateTimeTest {
     }
 
     @Test
-    public void dateTime_correctTimeParsing_success() throws IllegalValueException {
+    public void testCorrectTimeParsing() throws IllegalValueException {
         DateTime test = new DateTime("3pm");
         assertEquals(test.getTimeOnly(), "15:00:00");
     }
 
     @Test
-    public void dateTime_correctDateTimeParsing_success() throws IllegalValueException {
+    public void testCorrectDateTimeParsing() throws IllegalValueException {
         DateTime test = new DateTime("02/07/19 3pm");
         assertEquals(test.getAmericanDateOnly(), "02/07/2019");
         assertEquals(test.getDateOnly(), "07/02/2019");
@@ -592,70 +297,4 @@ public class DateTimeTest {
         assertEquals(test3.getDateTimeForFullCalendar(), "2019-02-07T15:00:00");
     }
 
-```
-###### \java\seedu\tache\testutil\TestTask.java
-``` java
-    @Override
-    public RecurState getRecurState() {
-        return this.recurState;
-    }
-
-    @Override
-    public List<Task> getUncompletedRecurList() {
-        assert startDateTime.isPresent();
-        assert endDateTime.isPresent();
-
-        List<Task> uncompletedRecurList = new ArrayList<Task>();
-        List<Date> uncompletedRecurDates = this.recurState.getUncompletedRecurDates(startDateTime.get(),
-                                                                                    endDateTime.get(), null);
-        for (int i = 0; i < uncompletedRecurDates.size(); i++) {
-            Task temp = new Task(this);
-            DateFormat df = new SimpleDateFormat("MM/dd/yyyy");
-            String tempDate = df.format(uncompletedRecurDates.get(i));
-            temp.getRecurState().setRecurDisplayDate(tempDate);
-            uncompletedRecurList.add(temp);
-        }
-
-        return uncompletedRecurList;
-    }
-
-    @Override
-    public List<Task> getUncompletedRecurList(Date filterEndDate) {
-        assert startDateTime.isPresent();
-        assert endDateTime.isPresent();
-
-        List<Task> uncompletedRecurList = new ArrayList<Task>();
-        List<Date> uncompletedRecurDates = this.recurState.getUncompletedRecurDates(startDateTime.get(),
-                                                                                    endDateTime.get(), filterEndDate);
-        for (int i = 0; i < uncompletedRecurDates.size(); i++) {
-            Task temp = new Task(this);
-            DateFormat df = new SimpleDateFormat("MM/dd/yyyy");
-            String tempDate = df.format(uncompletedRecurDates.get(i));
-            temp.getRecurState().setRecurDisplayDate(tempDate);
-            uncompletedRecurList.add(temp);
-        }
-
-        return uncompletedRecurList;
-    }
-
-    @Override
-    public List<Task> getCompletedRecurList() {
-        assert startDateTime.isPresent();
-        assert endDateTime.isPresent();
-
-        List<Task> completedRecurList = new ArrayList<Task>();
-        List<Date> completedRecurDates = this.recurState.getCompletedRecurDates(startDateTime.get(),
-                                                                                    endDateTime.get(), null);
-        for (int i = 0; i < completedRecurDates.size(); i++) {
-            Task temp = new Task(this);
-            DateFormat df = new SimpleDateFormat("MM/dd/yyyy");
-            String tempDate = df.format(completedRecurDates.get(i));
-            temp.getRecurState().setRecurDisplayDate(tempDate);
-            completedRecurList.add(temp);
-        }
-
-        return completedRecurList;
-    }
-
-}
 ```
