--- a/collated/test/A0139961U.md
+++ b/collated/test/A0139961U.md
@@ -7,7 +7,6 @@ import static seedu.tache.commons.core.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
 
 import org.junit.Test;
 
-import seedu.tache.commons.core.Messages;
 import seedu.tache.logic.commands.AddCommand;
 import seedu.tache.logic.commands.ClearCommand;
 import seedu.tache.logic.commands.CompleteCommand;
@@ -18,92 +17,86 @@ import seedu.tache.logic.commands.FindCommand;
 import seedu.tache.logic.commands.HelpCommand;
 import seedu.tache.logic.commands.ListCommand;
 import seedu.tache.logic.commands.LoadCommand;
-import seedu.tache.logic.commands.NextCommand;
-import seedu.tache.logic.commands.PrevCommand;
 import seedu.tache.logic.commands.SaveCommand;
 import seedu.tache.logic.commands.SelectCommand;
 import seedu.tache.logic.commands.UndoCommand;
-import seedu.tache.logic.commands.ViewCommand;
 
 public class HelpCommandTest extends TaskManagerGuiTest {
 
     @Test
-    public void help_addCommand_success() {
+    public void helpAdd() {
         commandBox.runCommand(HelpCommand.COMMAND_WORD + " " + AddCommand.COMMAND_WORD);
         assertResultMessage(AddCommand.MESSAGE_USAGE);
     }
 
     @Test
-    public void help_clearCommand_success() {
+    public void helpClear() {
         commandBox.runCommand(HelpCommand.COMMAND_WORD + " " + ClearCommand.COMMAND_WORD);
         assertResultMessage(ClearCommand.MESSAGE_USAGE);
     }
 
     @Test
-    public void help_completeCommand_success() {
+    public void helpComplete() {
         commandBox.runCommand(HelpCommand.COMMAND_WORD + " " + CompleteCommand.COMMAND_WORD);
         assertResultMessage(CompleteCommand.MESSAGE_USAGE);
     }
 
     @Test
-    public void help_deleteCommand_success() {
+    public void helpDelete() {
         commandBox.runCommand(HelpCommand.COMMAND_WORD + " " + DeleteCommand.COMMAND_WORD);
         assertResultMessage(DeleteCommand.MESSAGE_USAGE);
     }
 
     @Test
-    public void help_editCommand_success() {
+    public void helpEdit() {
         commandBox.runCommand(HelpCommand.COMMAND_WORD + " " + EditCommand.COMMAND_WORD);
         assertResultMessage(EditCommand.MESSAGE_USAGE);
     }
 
     @Test
-    public void help_exitCommand_success() {
+    public void helpExit() {
         commandBox.runCommand(HelpCommand.COMMAND_WORD + " " + ExitCommand.COMMAND_WORD);
         assertResultMessage(ExitCommand.MESSAGE_USAGE);
     }
 
     @Test
-    public void help_findCommand_success() {
+    public void helpFind() {
         commandBox.runCommand(HelpCommand.COMMAND_WORD + " " + FindCommand.COMMAND_WORD);
         assertResultMessage(FindCommand.MESSAGE_USAGE);
     }
 
     @Test
-    public void help_listCommand_success() {
+    public void helpList() {
         commandBox.runCommand(HelpCommand.COMMAND_WORD + " " + ListCommand.COMMAND_WORD);
         assertResultMessage(ListCommand.MESSAGE_USAGE);
     }
 
     @Test
-    public void help_loadCommand_success() {
+    public void helpLoad() {
         commandBox.runCommand(HelpCommand.COMMAND_WORD + " " + LoadCommand.COMMAND_WORD);
         assertResultMessage(LoadCommand.MESSAGE_USAGE);
     }
 
     @Test
-    public void help_saveCommand_success() {
+    public void helpSave() {
         commandBox.runCommand(HelpCommand.COMMAND_WORD + " " + SaveCommand.COMMAND_WORD);
         assertResultMessage(SaveCommand.MESSAGE_USAGE);
     }
 
     @Test
-    public void help_selectCommand_success() {
+    public void helpSelect() {
         commandBox.runCommand(HelpCommand.COMMAND_WORD + " " + SelectCommand.COMMAND_WORD);
         assertResultMessage(SelectCommand.MESSAGE_USAGE);
     }
 
     @Test
-    public void help_undoCommand_success() {
+    public void helpUndo() {
         commandBox.runCommand(HelpCommand.COMMAND_WORD + " " + UndoCommand.COMMAND_WORD);
         assertResultMessage(UndoCommand.MESSAGE_USAGE);
     }
 
-```
-###### \java\guitests\HelpCommandTest.java
-``` java
     @Test
-    public void help_invalidCommand_failure() {
+    public void helpInvalidCommandFailure() {
         commandBox.runCommand(HelpCommand.COMMAND_WORD + " INVALID COMMAND");
         assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, HelpCommand.MESSAGE_USAGE));
     }
@@ -112,7 +105,7 @@ public class HelpCommandTest extends TaskManagerGuiTest {
 ###### \java\guitests\ListCommandTest.java
 ``` java
     @Test
-    public void list_todayTasks_success() throws IllegalValueException {
+    public void listTodayTasks() throws IllegalValueException {
         assertListResult("list today", "Today");
         commandBox.runCommand("list");
         commandBox.runCommand("edit 1 change ed to today and et to 2359");
@@ -125,7 +118,7 @@ public class HelpCommandTest extends TaskManagerGuiTest {
     }
 
     @Test
-    public void list_thisWeekTasks_success() throws IllegalValueException {
+    public void listThisWeekTasks() throws IllegalValueException {
         assertListResult("list this week", "This week");
         commandBox.runCommand("list");
         commandBox.runCommand("edit 2 change ed to start of this week and et to 0000");
@@ -141,7 +134,7 @@ public class HelpCommandTest extends TaskManagerGuiTest {
     }
 
     @Test
-    public void list_overdueTasks_success() throws IllegalValueException {
+    public void listOverdueTasks() throws IllegalValueException {
         assertListResult("list overdue", "Overdue", td.eggsAndBread);
         commandBox.runCommand("list");
         commandBox.runCommand("edit 1 change ed to yesterday and et to 2359");
@@ -173,7 +166,6 @@ import seedu.tache.commons.core.Messages;
 import seedu.tache.commons.util.ConfigUtil;
 import seedu.tache.logic.commands.LoadCommand;
 import seedu.tache.logic.commands.SaveCommand;
-import seedu.tache.logic.commands.UndoCommand;
 import seedu.tache.testutil.TestTask;
 import seedu.tache.testutil.TestUtil;
 
@@ -227,7 +219,7 @@ public class SaveAndLoadCommandTest extends TaskManagerGuiTest {
     }
 
     @Test
-    public void save_invalidDirectory_failure() {
+    public void saveInvalidDirectoryFailure() {
         commandBox.runCommand(SaveCommand.COMMAND_WORD + " \\");
         assertResultMessage(MESSAGE_INVALID_DIRECTORY);
         commandBox.runCommand(SaveCommand.COMMAND_WORD + " /");
@@ -235,19 +227,19 @@ public class SaveAndLoadCommandTest extends TaskManagerGuiTest {
     }
 
     @Test
-    public void save_directoryNotExist_success() {
+    public void saveDirectoryNotExistSuccess() {
         commandBox.runCommand(SaveCommand.COMMAND_WORD + " " + saveFolder1 + "\\NotExistFolder");
         assertResultMessage(String.format(SaveCommand.MESSAGE_SUCCESS, saveFolder1 + "\\NotExistFolder"));
     }
 
     @Test
-    public void save_directoryExist_success() {
+    public void saveDirectoryExistSuccess() {
         commandBox.runCommand(SaveCommand.COMMAND_WORD + " " + saveFolder1);
         assertResultMessage(String.format(SaveCommand.MESSAGE_SUCCESS, saveFolder1));
     }
 
     @Test
-    public void load_invalidFilePath_failure() {
+    public void loadInvalidFilePathFailure() {
         commandBox.runCommand(LoadCommand.COMMAND_WORD + " " + saveFolder1);
         assertResultMessage(MESSAGE_INVALID_FILE);
         commandBox.runCommand(LoadCommand.COMMAND_WORD + " " + saveFolder1 + "\\someInvalidFolder" + fileName);
@@ -255,38 +247,17 @@ public class SaveAndLoadCommandTest extends TaskManagerGuiTest {
     }
 
     @Test
-    public void save_invalidCommand_failure() {
+    public void saveInvalidCommandFail() {
         commandBox.runCommand("saveeeeeee");
         assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
     }
 
     @Test
-    public void load_invalidCommand_failure() {
+    public void loadInvalidCommandFail() {
         commandBox.runCommand("loaddddd");
         assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
     }
 
-    @Test
-    public void save_undo_success() {
-        commandBox.runCommand(SaveCommand.COMMAND_WORD + " " + saveFolder1);
-        commandBox.runCommand(SaveCommand.COMMAND_WORD + " " + saveFolder2);
-        commandBox.runCommand(UndoCommand.COMMAND_WORD);
-        assertResultMessage(String.format(UndoCommand.MESSAGE_SUCCESS,
-                            String.format(SaveCommand.MESSAGE_SUCCESS, saveFolder1)));
-    }
-
-    @Test
-    public void load_undo_success() {
-        commandBox.runCommand(LoadCommand.COMMAND_WORD + " " + saveFolder1 + fileName);
-        commandBox.runCommand(LoadCommand.COMMAND_WORD + " " + saveFolder2 + fileName);
-        commandBox.runCommand(UndoCommand.COMMAND_WORD);
-        assertResultMessage(String.format(UndoCommand.MESSAGE_SUCCESS,
-                            String.format(LoadCommand.MESSAGE_SUCCESS, saveFolder1 + fileName)));
-    }
-
-```
-###### \java\guitests\SaveAndLoadCommandTest.java
-``` java
     @After
     public void cleanUp() {
         //Revert the config.json back to original
@@ -316,7 +287,7 @@ import org.junit.Test;
 public class MessagesTest {
 
     @Test
-    public void messages_initMessageNotNull_success() {
+    public void initMessageNotNull() {
         Messages msg = new Messages();
         assertNotNull(msg);
     }
@@ -326,7 +297,7 @@ public class MessagesTest {
 ###### \java\seedu\tache\model\task\DateTimeTest.java
 ``` java
     @Test
-    public void dateTime_isSameDate_success() throws IllegalValueException {
+    public void isSameDateSuccess() throws IllegalValueException {
         Date now = new Date();
         DateTime test = new DateTime(now.toString());
         Date date = new Date();
@@ -334,7 +305,7 @@ public class MessagesTest {
     }
 
     @Test
-    public void dateTime_isSameDate_failure() throws IllegalValueException {
+    public void isSameDateFailure() throws IllegalValueException {
         Date now = new Date();
         DateTime test = new DateTime(now.toString());
         Date date = new Date(0);
@@ -342,14 +313,14 @@ public class MessagesTest {
     }
 
     @Test
-    public void dateTime_isToday_success() throws IllegalValueException {
+    public void isTodaySuccess() throws IllegalValueException {
         Date today = new Date();
         DateTime test = new DateTime(today.toString());
         assertTrue(test.isToday());
     }
 
     @Test
-    public void dateTime_isToday_failure() throws IllegalValueException {
+    public void isTodayFailure() throws IllegalValueException {
         Date past = new Date(0);
         DateTime testPast = new DateTime(past.toString());
         assertFalse(testPast.isToday());
@@ -366,100 +337,24 @@ public class MessagesTest {
     }
 
     @Test
-    public void dateTime_isThisWeek_success() throws IllegalValueException {
+    public void isSameWeekSuccess() throws IllegalValueException {
         DateTime thisWeek = new DateTime("this week");
-        assertTrue(thisWeek.isThisWeek());
+        assertTrue(thisWeek.isSameWeek());
     }
 
     @Test
-    public void dateTime_isThisWeek_failure() throws IllegalValueException {
+    public void isSameWeekFailure() throws IllegalValueException {
         DateTime lastWeek = new DateTime("last week");
-        assertFalse(lastWeek.isThisWeek());
+        assertFalse(lastWeek.isSameWeek());
 
         DateTime nextWeek = new DateTime("next week");
-        assertFalse(nextWeek.isThisWeek());
+        assertFalse(nextWeek.isSameWeek());
     }
 
     @Test
-    public void dateTime_removeTime_success() throws IllegalValueException {
+    public void removeTimeSuccess() throws IllegalValueException {
         Date date = new Date();
         DateTime today = new DateTime("today 00:00AM");
         assertEquals(DateTime.removeTime(date), today.getDate());
     }
-
-```
-###### \java\seedu\tache\model\task\TaskTest.java
-``` java
-    @Test
-    public void isWithinDate_validWithinDate_success() throws IllegalValueException {
-        Date today = new Date();
-        Task task1 = new Task(new Name("TestTask1"), Optional.of(new DateTime("yesterday")),
-                Optional.of(new DateTime("tomorrow")), new UniqueTagList("TestTag"), true,
-                RecurInterval.NONE, new ArrayList<Date>());
-        assertTrue(task1.isWithinDate(today));
-        Task task2 = new Task(new Name("TestTask2"), Optional.of(new DateTime("today 000000")),
-                Optional.of(new DateTime("today 235959")), new UniqueTagList("TestTag"), true,
-                RecurInterval.NONE, new ArrayList<Date>());
-        assertTrue(task2.isWithinDate(today));
-    }
-
-    @Test
-    public void isWithinDate_validWithinDate_failure() throws IllegalValueException {
-        Date today = new Date();
-        Task task1 = new Task(new Name("TestTask1"), Optional.of(new DateTime("yesterday 0000")),
-                Optional.of(new DateTime("yesterday 2359")), new UniqueTagList("TestTag"), true,
-                RecurInterval.NONE, new ArrayList<Date>());
-        assertFalse(task1.isWithinDate(today));
-        Task task2 = new Task(new Name("TestTask2"), Optional.of(new DateTime("tomorrow 0000")),
-                Optional.of(new DateTime("tomorrow 2359")), new UniqueTagList("TestTag"), true,
-                RecurInterval.NONE, new ArrayList<Date>());
-        assertFalse(task2.isWithinDate(today));
-    }
-```
-###### \java\seedu\tache\ui\NotificationManagerTest.java
-``` java
-package seedu.tache.ui;
-
-import static org.junit.Assert.assertNotSame;
-import static org.junit.Assert.assertTrue;
-
-import java.awt.SystemTray;
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.Optional;
-import java.util.Timer;
-
-import org.junit.Test;
-
-import seedu.tache.commons.exceptions.IllegalValueException;
-import seedu.tache.model.recurstate.RecurState.RecurInterval;
-import seedu.tache.model.tag.UniqueTagList;
-import seedu.tache.model.task.DateTime;
-import seedu.tache.model.task.Name;
-import seedu.tache.model.task.Task;
-
-public class NotificationManagerTest {
-
-    @Test
-    public void showSystemTrayNotification_validInput_success() throws IllegalValueException {
-        NotificationManager testNotification = new NotificationManager();
-        Timer initialTimer = testNotification.getNotificationTimer();
-        Task event = new Task(new Name("Event"), Optional.of(new DateTime("2 hours later")),
-                Optional.of(new DateTime("2 days later")), new UniqueTagList("TestTag"), true,
-                RecurInterval.NONE, new ArrayList<Date>());
-        Task deadline = new Task(new Name("Deadline"), null,
-                Optional.of(new DateTime("2 hours later")), new UniqueTagList("TestTag"), true,
-                RecurInterval.NONE, new ArrayList<Date>());
-        if (SystemTray.isSupported()) {
-            testNotification.showSystemTrayNotification(event, 0);
-            testNotification.showSystemTrayNotification(deadline, 1);
-            assertNotSame(testNotification.getNotificationTimer().toString(), initialTimer.toString());
-            testNotification.stop();
-            assertNotSame(testNotification.getNotificationTimer().toString(), initialTimer.toString());
-        } else {
-            assertTrue(NotificationManager.SYSTEM_TRAY_NOT_SUPPORTED_MESSAGE, true);
-        }
-    }
-
-}
 ```
